--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,10 +1,9 @@
 ---
 import DetailsLayout from '../layouts/DetailsLayout.astro';
-import ThoughtLayout from '../layouts/ThoughtLayout.astro';
 import SectionBlock from '../components/SectionBlock.astro';
+
 const breadcrumbs = [
-  { text: 'Karina Tovar', href: '/' },
-  { text: 'About', href: '/about' },
+  { text: 'Back', href: '/' }
 ];
 ---
 
