--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,7 +3,7 @@ import { ViewTransitions } from 'astro:transitions';
 import CoordinateGrid from '../components/CoordinateGrid.astro';
 import '../styles/layout.css';
 import LoadingBar from '../components/LoadingBar.astro';
-import MenuBubble from '../components/MenuBubble.astro';
+import SiteMenu from '../components/SiteMenu.astro';
 
 interface Props {
 	title: string;
@@ -33,7 +33,7 @@ const { title, body_classes = '' } = Astro.props;
 		<LoadingBar />
 		<CoordinateGrid />
 		<div class="relative z-10">
-			<MenuBubble activePage={Astro.url.pathname} />
+			<SiteMenu activePage={Astro.url.pathname} />
 			<slot />
 		</div>
 	</body>
