--- a/src/components/SiteMenu.astro
+++ b/src/components/SiteMenu.astro
@@ -146,7 +146,7 @@ const navigationItems = [
 
   .menu-link {
     @apply text-7xl text-inkDark font-instrument transition-all duration-300 
-    hover:text-ink relative opacity-0 -translate-y-4;
+    hover:text-brand relative opacity-0 -translate-y-4;
     transition-delay: calc(var(--index) * 100ms);
   }
 
